fix: Memory game vertical alignment

--- a/src/components/memory/Flashcard.css
+++ b/src/components/memory/Flashcard.css
@@ -27,7 +27,7 @@
   margin: 10px 0;
 }
 
-.Flashcard-content p {
+.Flashcard-content-text {
   margin-top: 28px;
 }
 
